--- a/src/App.scss
+++ b/src/App.scss
@@ -1152,6 +1152,11 @@ select:hover, select:focus {
     background-color: var(--base);
 }
 
+.form-control:disabled {
+    color: var(--accentTranslucid);
+    background-color: var(--base);
+}
+
 .mb-3{
     margin-bottom: 0.75rem !important;
 }
